# gw2-addon-search

./: .gitignore  .gitmodules  CMakeLists.txt  Finder.cpp  Finder.h  Search.sln  Search.vcxproj  Search.vcxproj.filters  api_details.md  dllmain.cpp  generate_item_store.py
MockStandalone/: CMakeLists.txt  MockStandalone.vcxproj  MockStandalone.vcxproj.filters  main.cpp
include/: .gitignore
include/sqlite/: init_sqlite.bat
res/: resource.aps  resource.h  resource.rc
src/: APIClient.cpp  APIClient.h  Config.cpp  Config.h  Finder.cpp  Finder.h  Item.h  ItemStore.cpp  ItemStore.h  Search.h  const.h  dllmain.cpp  global.h  helper.h  imgui_extras.h  imgui_helper.h  imgui_virtual_list.h  main.cpp  sql_commands.h  standalone.cpp  standalone.h
store/: generate_item_store.py  test_search.py
